opam-version: "2.0"
synopsis: "melange-dune-test"
maintainer: ["torben@ewert-online.com"]
authors: ["Torben Ewert"]
license: "MIT"
homepage: "https://github.com/ewert-online/melange-dune-test"
bug-reports: "https://github.com/ewert-online/melange-dune-test/issues"
depends: [
  "ocaml" {>= "4.14.0" & < "5.0.0"}
  "reason" {>= "3.8.1" & < "4.0.0"}
  "ocaml-protoc"
  "dune" {dev}
  "melange-compiler-libs" {dev}
  "melange" {dev}
  "reactjs-jsx-ppx" {dev}
  "ocaml-lsp-server" {dev}
  "dot-merlin-reader" {dev}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
dev-repo: "git+https://github.com/melange-dune-test/melange-dune-test.git"
pin-depends: [
  [ "dune.dev" "git+https://github.com/ocaml/dune.git#66573762f28b84268cf04c3c46d0deaef9945316" ]
  [ "melange-compiler-libs.dev" "git+https://github.com/melange-re/melange-compiler-libs.git#7263bea2285499f5da857f2bb374345a5178791e" ]
  [ "melange.dev" "git+https://github.com/melange-re/melange.git#4df18aaa5468391c4b190ebc5d4c3ba38698a565" ]
  [ "reactjs-jsx-ppx.dev" "git+https://github.com/melange-re/melange.git#4df18aaa5468391c4b190ebc5d4c3ba38698a565" ]
]